in present tense
add headers and text

--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -15,5 +15,20 @@
 
 <body>
     
+    <p>
+        Here at Animal Index, we provide everything you need to know about <strong>Cats</strong>, <strong>Dogs</strong> and <strong>Birds</strong>!
+    </p> 
+
+    <h2>
+        The History Behind Animal Index
+    </h2>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, enim facere sint expedita earum doloribus perferendis aliquid quos dolor tempora cum autem cumque voluptas necessitatibus facilis illo aut ut nemo.
+    </p>
+
+    <h2>
+        Ranking Our Favorite Animals
+    </h2>
+    
 </body>
 </html>
