in present tense
add list and list items

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
     <p>
         The following list is our top pics for the absolute best animals on the planet, and because all animals are awesome, we have placed them in no particular order!
     </p>
+
+    <h3>
+        Best Dog Breeds
+    </h3>
     
+    <ul>
+        <li>Labrador Retriever</li> <li>Beagle</li> <li>Bull Dog</li> <li>Rhodesian Ridgeback</li> <li>Bernese Mountain Dog</li> <li>German Shepard</li>
+    </ul>
+
 </body>
 </html>
