in present taste
hyperlink to dog page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </h3>
     
     <ul>
-        <li>Labrador Retriever</li> <li>Beagle</li> <li>Bull Dog</li> <li>Rhodesian Ridgeback</li> <li>Bernese Mountain Dog</li> <li>German Shepard</li>
+        <a href="pages/dogs.html"><li>Labrador Retriever</li></a> <li>Beagle</li> <li>Bull Dog</li> <li>Rhodesian Ridgeback</li> <li>Bernese Mountain Dog</li> <li>German Shepard</li>
     </ul>
 
 </body>
