in present tense
create cat list and add hyperlink to cat page

--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
         <a href="pages/dogs.html"><li>Labrador Retriever</li></a> <li>Beagle</li> <li>Bull Dog</li> <li>Rhodesian Ridgeback</li> <li>Bernese Mountain Dog</li> <li>German Shepard</li>
     </ul>
 
+    <h3>
+        Best Cat Breeds
+    </h3>
+
+    <ul>
+        <a href="pages/cats.html"><li>Maine Coon</li></a>
+    </ul>
+
 </body>
 </html>
