in present tense
update to dog.html page ad creation of list

--- a/index.html
+++ b/index.html
@@ -45,8 +45,23 @@
     </h3>
 
     <ul>
-        <a href="pages/cats.html"><li>Maine Coon</li></a>
+        <a href="pages/cats.html"><li>Maine Coon</li></a> <li>Siamese</li> <li>Sphynx</li> <li>Persian</li> <li>Birman</li> <li>British Short Hair</li>
     </ul>
 
+    <h3>
+        Best Bird Species
+    </h3>
+
+    <ul>
+        <a href="pages/birds.html"><li>Cockatiel</li></a> <li>Conure</li> <li>Finch</li> <li>Canary</li> <li>Parakeet</li> <li>Love Bird</li>
+    </ul>
+
+    <br>
+    
+    <footer>
+        <p>
+            <i>Thank you for visiting our site! Ge be Awesome to Animals!</i>
+        </p>
+    </footer>
 </body>
 </html>
