--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animal Index: Dogs - Labrador Retriever</title>
 </head>
+<header>
+    <h1>
+        Labrador Retriever
+    </h1>
+</header>
+
 <body>
+    <p>
+        The Labrador Retriever or simply Labrador is a british breed of retriever gun dog. It was developed in the United Kingdom from fishing dogs imported from the colony of Newfoundland, and was named after the Labrador region of that colony.
+    </p>
+
+    <h2>
+        Labradors Favorite Things In Order!
+    </h2>
     
 </body>
 </html>
