in present tense
update to dog.html page and addition of hyperlink to wikipedia page

--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -20,6 +20,18 @@
     <h2>
         Labradors Favorite Things In Order!
     </h2>
-    
+
+    <ol>
+        <li>Eating</li> <li>Swimming</li> <li>Social Gatherings</li>
+    </ol>
+
+    <h2>
+        <i>Do You Want To Know More!</i>
+    </h2>
+
+    <p>
+        Click <a href="https://en.wikipedia.org/wiki/Golden_Retriever">HERE</a> to go to Wikipedia!
+    </p>
+
 </body>
 </html>
