in present tense
creation of list under cats.html page

--- a/pages/cats.html
+++ b/pages/cats.html
@@ -13,6 +13,17 @@
 </header>
 
 <body>
-    
+    <p>
+        The Maine Coon is a large domesticated cat breed. It is one of the oldest natural breeds in North America. The breed originated in the U.S. state of Maine,[3] where it is the official state cat.
+    </p>
+
+    <h2>
+        Maine Coon's Favorite Things in Order 
+    </h2>
+
+    <ol>
+        <li></li> <li></li> <li></li>
+    </ol>
+
 </body>
 </html>
