--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -18,7 +18,7 @@
     </p>
 
     <h2>
-        Labradors Favorite Things In Order!
+        Labradors Favorite Things in Order!
     </h2>
 
     <ol>
