in present tense
update to list under cats.html page and addition of hyperlink to wikipedia

--- a/pages/cats.html
+++ b/pages/cats.html
@@ -22,8 +22,16 @@
     </h2>
 
     <ol>
-        <li></li> <li></li> <li></li>
+        <li>Playing with their owners</li> <li>Splashing water from their bowls</li> <li>Climbing up high</li>
     </ol>
+
+    <h3>
+        <i>Do You Want To Know More!</i>
+    </h3>
+
+    <p>
+        Click <a href="https://en.wikipedia.org/wiki/Maine_Coon">HERE</a> to go to Wikipedia!
+    </p>
 
 </body>
 </html>
