--- a/pages/birds.html
+++ b/pages/birds.html
@@ -12,6 +12,13 @@
     </h1>
 </header>
 <body>
+    <p>
+        The cockatiel , also known as the weero/weiro[3][4] or quarrion,[5][6] is a medium-sized[7] parrot that is a member of its own branch of the cockatoo family endemic to Australia.
+    </p>
+
+    <h2>
+        Cockatiel's Favorite Things in Order!
+    </h2>
     
 </body>
 </html>
