--- a/pages/birds.html
+++ b/pages/birds.html
@@ -19,6 +19,10 @@
     <h2>
         Cockatiel's Favorite Things in Order!
     </h2>
+
+    <ol>
+        <li>Eating</li> <li>Bells</li> <li>Mirrors</li>
+    </ol>
     
 </body>
 </html>
