in present tense
Addition of text and header and hyperlink to wikipedia under birds.html page

--- a/pages/birds.html
+++ b/pages/birds.html
@@ -23,6 +23,14 @@
     <ol>
         <li>Eating</li> <li>Bells</li> <li>Mirrors</li>
     </ol>
-    
+
+    <h3>
+        Do You Want To Know More!
+    </h3>
+
+    <p>
+        Click <a href="https://en.wikipedia.org/wiki/Cockatiel">HERE</a> to go to Wikipedia!
+    </p>
+
 </body>
 </html>
